fixed routing bug for square and home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         </td>
 
         <td>
-          <a href="pages_templates/square_new">
+          <a href="/square_new">
             Square with Form
           </a>
         </td>
