--- a/app/views/square_new.html.erb
+++ b/app/views/square_new.html.erb
@@ -1,4 +1,4 @@
-<form action="pages_templates/results">
+<form action="/results">
   <div>
     <label for="user_number">Enter a number</label>
   </div>
