added RCAV for square root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,13 @@
         </td>
 
         <td>
-          <a href="/square_new">
+          <a href="/square_form">
             Square with Form
           </a>
         </td>
 
         <td>
-          <a href="/square_root/new">
+          <a href="/sqrt_form">
             Square Root with Form
           </a>
         </td>
