added RCAV for payment, random

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,13 @@
         </td>
 
         <td>
-          <a href="/payment/new">
+          <a href="/payment_form">
             Payment with Form
           </a>
         </td>
 
         <td>
-          <a href="/random/new">
+          <a href="/random_form">
             Random with Form
           </a>
         </td>
